Changes for test result artifact

--- a/circle.yml
+++ b/circle.yml
@@ -3,3 +3,8 @@ deployment:
     branch: master
     heroku:
       appname: cicdmaster
+test:
+  override:
+    - mocha test --reporter mocha-junit-reporter:
+        environment:
+          MOCHA_FILE: $CIRCLE_TEST_REPORTS/junit/test-results.xml
