--- a/circle.yml
+++ b/circle.yml
@@ -5,6 +5,6 @@ deployment:
       appname: cicdmaster
 test:
   override:
-    - mocha test --reporter mocha-junit-reporter:
+    - mocha test --reporter spec:
         environment:
           MOCHA_FILE: $CIRCLE_TEST_REPORTS/junit/test-results.xml
